<resources>
    <string name="app_name">Syrup 테이블</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_menu_home">HOME</string>
    <string name="nav_menu_login">로그인</string>
    <string name="nav_menu_mypage">마이페이지</string>
    <string name="nav_menu_order">주문/배송조회</string>
    <string name="nav_menu_cart">장바구니</string>
    <string name="nav_menu_noti">공지사항</string>
    <string name="nav_menu_board">고객게시판</string>
    <string name="nav_menu_review">리뷰게시판</string>


    <string name="action_settings">Settings</string>
    <string name="tab_text_1">핫플레이스</string>
    <string name="tab_text_2">SHOP</string>
    <string name="tab_text_3">음식공유</string>
    <string name="tab_text_4">배달365</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_store_info">StoreInfoActivity</string>
</resources>
